aligned mic, expanded hamburger bar, added playback, fixed eval bg

--- a/public/css/evaluation.css
+++ b/public/css/evaluation.css
@@ -5,7 +5,7 @@
 }
 
 html{
-     background: url('../images/clipboard5.jpg');
+     background: url('../images/clipboard6.jpg');
      background-size: 100%;
 }
 input[type=radio] {
@@ -18,6 +18,15 @@ input[type=radio] {
      text-align: center;
      margin-top: 18%;
   /*   text-decoration: underline;*/
+}
+
+.pageTitle h4{
+     margin-top: 6%;
+     margin-bottom:0;
+}
+
+#recBar img{
+     margin-bottom: 10%;
 }
 
 .col-xs-6{
